--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/bootstrap-social.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/style.css">
     
-    <title>OnPayroll</title>
+    <title>PayrollKu</title>
   </head>
   <body>
     <noscript>
